--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "npmClient": "yarn",
-  "packages": ["packages/*"],
+  "packages": ["backends/*", "frontends/*", "packages/*"],
   "version": "1.0.0",
   "useWorkspaces": true
 }
