--- a/backends/hasura/metadata/databases/default/tables/public_identity.yaml
+++ b/backends/hasura/metadata/databases/default/tables/public_identity.yaml
@@ -5,3 +5,23 @@ object_relationships:
 - name: user
   using:
     foreign_key_constraint_on: user_uid
+select_permissions:
+- permission:
+    columns:
+    - uid
+    - created_at
+    - updated_at
+    - idp
+    - props
+    - idp_id
+    - user_uid
+    filter:
+      user_uid:
+        _eq: X-Hasura-User-Uid
+  role: user
+delete_permissions:
+- permission:
+    filter:
+      user_uid:
+        _eq: X-Hasura-User-Uid
+  role: user
