fix(hasura): fk and rel between task_group and user

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ HASURA_ENDPOINT_SCHEME_HTTP=http
 HASURA_ENDPOINT_SCHEME_WS=ws
 HASURA_ENDPOINT_PATH_GRAPHQL=/v1beta1/relay
 HASURA_IMAGE_REPOSITORY=monorepo/hasura
+HASURA_GRAPHQL_ENDPOINT=${HASURA_ENDPOINT_SCHEME_HTTP}://${HASURA_ENDPOINT_IP}:${HASURA_ENDPOINT_PORT}
+HASURA_GRAPHQL_ADMIN_SECRET=helloworld
 
 API_ENDPOINT_IP=localhost
 API_ENDPOINT_PORT=8080
