--- a/backends/hasura/metadata/databases/default/tables/public_idp.yaml
+++ b/backends/hasura/metadata/databases/default/tables/public_idp.yaml
@@ -2,3 +2,11 @@ table:
   name: idp
   schema: public
 is_enum: true
+array_relationships:
+- name: identities
+  using:
+    foreign_key_constraint_on:
+      column: idp
+      table:
+        name: identity
+        schema: public
