--- a/backends/hasura/metadata/databases/default/tables/public_task_group.yaml
+++ b/backends/hasura/metadata/databases/default/tables/public_task_group.yaml
@@ -4,7 +4,7 @@ table:
 object_relationships:
 - name: user
   using:
-    foreign_key_constraint_on: uid
+    foreign_key_constraint_on: user_uid
 array_relationships:
 - name: tasks
   using:
