--- a/backends/hasura/package.json
+++ b/backends/hasura/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/faker": "^5.5.8",
+    "@types/pg": "^8.6.1",
     "hasura-cli": "2.0.7"
   },
   "dependencies": {
