--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,12 @@
     "module": "CommonJS",
     "moduleResolution": "Node",
     "rootDir": ".",
-    "baseUrl": "packages",
+    "baseUrl": ".",
     "paths": {
       "@jjangga0214/*": ["*/src"],
-      "#foo/*": ["foo/src/*"],
-      "#bar/*": ["bar/src/*"],
+      "#foo/*": ["packages/foo/src/*"],
+      "#bar/*": ["packages/bar/src/*"],
+      "#api/*": ["backends/api/src/*"],
       "#*": ["*/src"]
     },
     "strict": true,
