feat(api): impl additional schema

--- a/backends/api/.env.example
+++ b/backends/api/.env.example
@@ -8,3 +8,7 @@ API_OAUTH2_KAKAO_CLIENT_ID=helloworld
 API_OAUTH2_KAKAO_CLIENT_SECRET=helloworld
 OBSERVABILITY_SERVICE_NAME=api
 API_REFRESHING_ADMIN_SERVICEACCOUNT_ACCESS_TOKEN=false
+
+FRONTEND_ENDPOINT_SCHEME=http
+FRONTEND_ENDPOINT_IP=localhost
+FRONTEND_ENDPOINT_PORT=8081
