build(version): adjust to 0.0.1

--- a/backends/hasura/docker-compose.yml
+++ b/backends/hasura/docker-compose.yml
@@ -45,6 +45,6 @@ services:
       HASURA_GRAPHQL_UNAUTHORIZED_ROLE: ${HASURA_GRAPHQL_UNAUTHORIZED_ROLE}
       API_ENDPOINT_PORT: ${API_ENDPOINT_PORT}
       API_ENDPOINT_IP: ${API_ENDPOINT_IP}
-      API_ENDPOINT_SCHEME: ${API_ENDPOINT_SCHEME}
+      API_ENDPOINT_SCHEME_HTTP: ${API_ENDPOINT_SCHEME_HTTP}
 volumes:
   postgres-data:
