--- a/frontends/tasker/package.json
+++ b/frontends/tasker/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "build": "tsc --build tsconfig.build.json",
     "clean": "tsc --build tsconfig.build.json --clean && del coverage *.log junit.xml dist && jest --clearCache",
+    "dotenvgen": "yarn ts-node workflow/dotenvgen.ts",
     "ts": "yarn ts-node",
     "start": "node dist/index.js"
   },
