--- a/frontends/tasker/pubspec.yaml
+++ b/frontends/tasker/pubspec.yaml
@@ -23,15 +23,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   kakao_flutter_sdk: ^0.7.1
+  get: ^4.3.4
+  graphql_flutter: ^5.0.0
+  json_annotation: ^4.0.1
+  equatable: ^2.0.3
+  meta: ^1.3.0
+  gql: ^0.13.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.0
+  artemis: ^7.1.1-beta.1
+  json_serializable: ^4.1.4
+  test: ^1.16.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
