--- a/frontends/tasker/.env.example
+++ b/frontends/tasker/.env.example
@@ -1,2 +1,4 @@
-# This should be "NATIVE APP KEY (e.g. "NOT" REST API KEY)"
+# TASKER_OAUTH2_KAKAO_CLIENT_ID should be "NATIVE APP KEY (e.g. "NOT" REST API KEY)"
 TASKER_OAUTH2_KAKAO_CLIENT_ID=helloworld
+# TASKER_API_ACCESS_TOKEN should only be used for local development. For production, set it to false (boolean).
+TASKER_API_ACCESS_TOKEN=helloworld
