--- a/frontends/tasker/pubspec.yaml
+++ b/frontends/tasker/pubspec.yaml
@@ -68,18 +68,32 @@ flutter:
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: SFProText
+      fonts:
+        - asset: fonts/SF-Pro-Text/SF-Pro-Text-Regular.ttf
+          weight: 500
+        - asset: fonts/SF-Pro-Text/SF-Pro-Text-Medium.ttf
+          weight: 600
+        - asset: fonts/SF-Pro-Text/SF-Pro-Text-Bold.ttf
+          weight: 700
+        - asset: fonts/SF-Pro-Text/SF-Pro-Text-Regular-Italic.ttf
+          style: italic
+          weight: 500
+        - asset: fonts/SF-Pro-Text/SF-Pro-Text-Medium-Italic.ttf
+          style: italic
+          weight: 600
+        - asset: fonts/SF-Pro-Text/SF-Pro-Text-Bold-Italic.ttf
+          style: italic
+          weight: 700
+
+    - family: SFProDisplay
+      fonts:
+        - asset: fonts/SF-Pro-Display/SF-Pro-Display-Regular.ttf
+          weight: 500
+        - asset: fonts/SF-Pro-Display/SF-Pro-Display-Medium.ttf
+          weight: 600
+        - asset: fonts/SF-Pro-Display/SF-Pro-Display-Bold.ttf
+          weight: 700
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
