--- a/frontends/tasker/package.json
+++ b/frontends/tasker/package.json
@@ -16,7 +16,9 @@
   "scripts": {
     "build": "tsc --build tsconfig.build.json",
     "clean": "tsc --build tsconfig.build.json --clean && del coverage *.log junit.xml dist && jest --clearCache",
-    "dotenvgen": "yarn ts-node workflow/dotenvgen.ts",
+    "dotenv-gen": "yarn ts-node workflow/dotenv-gen.ts",
+    "gql-code-gen": "flutter pub run build_runner build",
+    "launcher-icon-gen": "flutter pub run flutter_launcher_icons:main",
     "ts": "yarn ts-node",
     "start": "node dist/index.js"
   },
