--- a/frontends/tasker/pubspec.yaml
+++ b/frontends/tasker/pubspec.yaml
@@ -42,6 +42,7 @@ dev_dependencies:
   artemis: ^7.1.1-beta.1
   json_serializable: ^4.1.4
   test: ^1.16.8
+  flutter_launcher_icons: ^0.9.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -54,9 +55,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    # Trailing slash(/) means directory. REF:  https://flutter.dev/docs/development/ui/assets-and-images#specifying-assets
+    - assets/
+    # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
