refactor(tasker): use GetX for state management

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -46,6 +46,13 @@
       ],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen"
+    },
+    {
+      "name": "flutter(Tasker)",
+      "request": "launch",
+      "type": "dart",
+      "flutterMode": "debug",
+      "cwd": "frontends/tasker"
     }
   ],
   "inputs": [
