feat(api): require PlatformEnum for SignInOrUp

--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,15 @@ HASURA_GRAPHQL_ADMIN_SECRET=helloworld
 
 API_ENDPOINT_IP=localhost
 API_ENDPOINT_PORT=8080
-API_ENDPOINT_SCHEME=http
+API_ENDPOINT_SCHEME_HTTP=http
 API_ENDPOINT_PATH_GRAPHQL=/graphql
 API_IMAGE_REPOSITORY=monorepo/api
+
+TASKER_ENDPOINT_SCHEME=http
+TASKER_ENDPOINT_IP=localhost
+TASKER_ENDPOINT_PORT=8081
+# TASKER_OAUTH2_KAKAO_CLIENT_ID should be "NATIVE APP KEY" (e.g. "NOT" REST API KEY)
+TASKER_OAUTH2_KAKAO_CLIENT_ID=helloworld
 
 # On Windows and Mac, the value should be 'host.docker.internal'.
 # On Linux, its default value would be 172.17.0.1
