--- a/frontends/tasker/pubspec.yaml
+++ b/frontends/tasker/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   meta: ^1.3.0
   gql: ^0.13.0
   intl: ^0.17.0
+  flutter_secure_storage: ^4.2.1
 
 dev_dependencies:
   flutter_test:
