chore(tasker): fix env comment

--- a/frontends/tasker/.env.example
+++ b/frontends/tasker/.env.example
@@ -1,4 +1,4 @@
 # TASKER_API_ACCESS_TOKEN should only be used for local development. For production, set it to false (boolean).
 TASKER_API_ACCESS_TOKEN=helloworld
-# TASKER_API_ACCESS_TOKEN should only be used for local development. For production, remove it.
+# This overrides API_ENDPOINT_IP. It should only be used for local development. For production, remove it.
 API_ENDPOINT_IP=192.168.0.5
