chore(lint): add eslint-config-airbnb-typescript

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "lerna run --parallel build",
     "build:fresh": "yarn clean && yarn build",
-    "clean": "lerna run --parallel clean && shx rm -rf .build-cache *.log coverage junit.xml",
+    "clean": "lerna run --parallel clean && del-cli .build-cache *.log coverage junit.xml",
     "test": "jest",
     "test:unit": "jest packages/*/test/unit",
     "test:integration": "jest packages/*/test/integration",
@@ -23,7 +23,7 @@
     "coverage:unit": "yarn test:unit --coverage",
     "coverage:integration": "yarn test:integration --coverage",
     "coverage:show": "live-server coverage",
-    "lint": "eslint --ext .js --ext .ts --ext .md",
+    "lint": "eslint --ext .js,.ts,.md",
     "lint:ci": "yarn lint . --format junit",
     "lint:md": "markdownlint --ignore node_modules --ignore .git",
     "format": "yarn lint --fix",
@@ -48,8 +48,8 @@
     "@swc/jest": "^0.1.4",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.4.2",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
     "commitizen": "^4.2.4",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
@@ -57,6 +57,7 @@
     "dotenv-cli": "^4.0.0",
     "eslint": "^7.31.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "2.23.4",
